--- a/WpfView/MainWindow.xaml
+++ b/WpfView/MainWindow.xaml
@@ -1,36 +1,11 @@
 ﻿<Window x:Class="WpfView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="400" Width="400">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="200" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Center"
-                    VerticalAlignment="Center">
-            <TextBlock Text="Текущий вопрос:" />
-            <TextBlock Name="QuestionTextBlock" Text="Вопрос" />
-        </StackPanel>
-
-        <StackPanel Grid.Row="1" Grid.Column="0" Name="AnswersStackPanel"
-                    Orientation="Vertical"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Width="200">
-            <Button> 1 Ответ номер 1</Button>
-            <Button> 2 Ответ номер 2</Button>
-            <Button> 2 Ответ номер 3</Button>
-        </StackPanel>
-    </Grid>
+        Title="MainWindow" Height="450" Width="800">
+    <StackPanel Name="Container">
+        
+    </StackPanel>
 </Window>
